--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <body>
     <div class="d-sm-flex flex-sm-wrap flex-md-nowrap">
-        <aside class="col-12 col-sm-4 col-md-4 col-lg-3 anas">
+        <aside class="col-12 col-sm-4 col-md-4 col-lg-3">
             <div class="logo">
                 <a href="#"><span>A</span>nas</a>
             </div>
