--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 </head>
 
 <body>
+    <!-- Start Aside Section  -->
     <div class="d-sm-flex flex-sm-wrap flex-md-nowrap">
         <aside class="col-12 col-sm-4 col-md-4 col-lg-3">
             <div class="logo">
@@ -66,11 +67,12 @@
                 </div>
             </nav>
         </aside>
+        <!-- End Aside Section  -->
 
         <!-- Main Content Start  -->
         <div
             class="main-content col-12 col-sm-8 col-md-8 col-lg-9 d-flex justify-content-start align-items-center flex-wrap">
-            <section class="home container row ps-5 pt-5 active" id="home">
+            <section class="home container row ps-5 pt-5 active pb-5" id="home">
                 <div class="row section-title">
                     <div class="home-info col-md-12 col-lg-8">
                         <h3 class="hello">Hello, My name is <span class="name">Anas Elwogoud</span></h3>
@@ -131,56 +133,68 @@
                                     <a href="#contact" class="btn hire-me jsLink">Hire Me</a>
                                 </div>
                             </div>
-                            <div class="skills col-5">
+
+                            <div class="skills col-4 col-lg-5">
                                 <div class="row">
-                                    <div class="skill-item d-flex flex-wrap">
-                                        <div class="progress">
-                                            <div class="outer">
-                                                <div class="inner">
-                                                    <div id="number" type="HTML"></div>
-                                                </div>
-                                            </div>
-                                            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="160px"
-                                                height="160px">
-                                                <circle cx="80" cy="80" r="70" stroke-linecap="round" />
+                                    <div
+                                        class="cards col-11 col-lg-6 mb-4 d-flex justify-content-center align-items-center">
+                                        <div class="percent d-flex" style="--num:85;">
+                                            <div class="dot"></div>
+                                            <svg>
+                                                <circle cx="70" cy="70" r="70"></circle>
+                                                <circle cx="70" cy="70" r="70"></circle>
                                             </svg>
                                         </div>
-                                        <div class="progress">
-                                            <div class="outer">
-                                                <div class="inner">
-                                                    <div id="number" type="CSS"></div>
-                                                </div>
-                                            </div>
-                                            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="160px"
-                                                height="160px">
-                                                <circle cx="80" cy="80" r="70" stroke-linecap="round" />
+                                        <div class="number">
+                                            <p class="h2">85<span>%</span></p>
+                                            <p>HTML</p>
+                                        </div>
+                                    </div>
+                                    <div
+                                        class="cards col-11 col-lg-6 mb-4 d-flex justify-content-center align-items-center">
+                                        <div class="percent d-flex" style="--num:85;">
+                                            <div class="dot"></div>
+                                            <svg>
+                                                <circle cx="70" cy="70" r="70"></circle>
+                                                <circle cx="70" cy="70" r="70"></circle>
                                             </svg>
                                         </div>
-                                        <div class="progress">
-                                            <div class="outer">
-                                                <div class="inner">
-                                                    <div id="number" type="Angular"></div>
-                                                </div>
-                                            </div>
-                                            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="160px"
-                                                height="160px">
-                                                <circle cx="80" cy="80" r="70" stroke-linecap="round" />
+                                        <div class="number">
+                                            <p class="h2">85<span>%</span></p>
+                                            <p>CSS</p>
+                                        </div>
+                                    </div>
+                                    <div
+                                        class="cards col-11 col-lg-6 mb-4 d-flex justify-content-center align-items-center">
+                                        <div class="percent d-flex" style="--num:75;">
+                                            <div class="dot"></div>
+                                            <svg>
+                                                <circle cx="70" cy="70" r="70"></circle>
+                                                <circle cx="70" cy="70" r="70"></circle>
                                             </svg>
                                         </div>
-                                        <div class="progress">
-                                            <div class="outer">
-                                                <div class="inner">
-                                                    <div id="number" type="JS"></div>
-                                                </div>
-                                            </div>
-                                            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="160px"
-                                                height="160px">
-                                                <circle cx="80" cy="80" r="70" stroke-linecap="round" />
+                                        <div class="number">
+                                            <p class="h2">75<span>%</span></p>
+                                            <p>JS</p>
+                                        </div>
+                                    </div>
+                                    <div
+                                        class="cards col-11 col-lg-6 mb-4 d-flex justify-content-center align-items-center">
+                                        <div class="percent d-flex" style="--num:70;">
+                                            <div class="dot"></div>
+                                            <svg>
+                                                <circle cx="70" cy="70" r="70"></circle>
+                                                <circle cx="70" cy="70" r="70"></circle>
                                             </svg>
+                                        </div>
+                                        <div class="number">
+                                            <p class="h2">70<span>%</span></p>
+                                            <p>AngularJS</p>
                                         </div>
                                     </div>
                                 </div>
                             </div>
+
                             <div class="row mt-4 mt-lg-0">
                                 <div class="education col-lg-6">
                                     <h3 class="title">Education</h3>
@@ -213,6 +227,7 @@
                                         </div>
                                     </div>
                                 </div>
+
                                 <div class="experience col-lg-6 mt-4 mt-lg-0">
                                     <h3 class="title">Experience</h3>
                                     <div class="row">
