--- a/index.html
+++ b/index.html
@@ -338,45 +338,106 @@
                         <div class="portfolio-heading mb-4">
                             <h3>My Last Projects:</h3>
                         </div>
-                        <div class="portfolio-item col-12 col-lg-4">
+                        <div class="portfolio-item col-12 col-lg-6 col-xl-4">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="imgs/" alt="">
+                                    <div class="content">
+                                        <div class="text">
+                                            <p class="ps-xl-4 fw-bold h4">Template One</p>
+                                            <a href="https://github.com/AnasElwogoud/Template1"
+                                                class="mx-3 mx-md-1 mx-lg-3" target="_blank" title="Github Link"><i
+                                                    class="fa-brands fa-github fa-2x"></i></a>
+                                            <a href="https://anaselwogoud.github.io/Template1/" target="_blank" title="
+                                        Demo Live"><i class="fa-solid fa-link fa-2x"></i></a>
+                                        </div>
+                                    </div>
+                                    <img src="imgs/Portfolio-1.png" alt="">
                                 </div>
                             </div>
                         </div>
-                        <div class="portfolio-item col-12 col-lg-4">
+                        <div class="portfolio-item col-12 col-lg-6 col-xl-4">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="imgs/" alt="">
+                                    <div class="content">
+                                        <div class="text">
+                                            <p class="ps-xl-4 fw-bold h4">Template Two</p>
+                                            <a href="https://github.com/AnasElwogoud/Template2"
+                                                class="mx-3 mx-md-1 mx-lg-3" target="_blank" title="Github Link"><i
+                                                    class="fa-brands fa-github fa-2x"></i></a>
+                                            <a href="https://anaselwogoud.github.io/Template2/" target="_blank" title="
+                                    Demo Live"><i class="fa-solid fa-link fa-2x"></i></a>
+                                        </div>
+                                    </div>
+                                    <img src="imgs/Portfolio-2.png" alt="">
                                 </div>
                             </div>
                         </div>
-                        <div class="portfolio-item col-12 col-lg-4">
+                        <div class="portfolio-item col-12 col-lg-6 col-xl-4">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="imgs/" alt="">
+                                    <div class="content">
+                                        <div class="text">
+                                            <p class="ps-xl-4 fw-bold h4">Template Three</p>
+                                            <a href="https://github.com/AnasElwogoud/Template3"
+                                                class="mx-3 mx-md-1 mx-lg-3" target="_blank" title="Github Link"><i
+                                                    class="fa-brands fa-github fa-2x"></i></a>
+                                            <a href="https://anaselwogoud.github.io/Template3/" target="_blank" title="
+                                    Demo Live"><i class="fa-solid fa-link fa-2x"></i></a>
+                                        </div>
+                                    </div>
+                                    <img src="imgs/Portfolio-3.png" alt="">
                                 </div>
                             </div>
                         </div>
-                        <div class="portfolio-item col-12 col-lg-4">
+                        <div class="portfolio-item col-12 col-lg-6 col-xl-4">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="imgs/" alt="">
+                                    <div class="content">
+                                        <div class="text">
+                                            <p class="ps-xl-4 fw-bold h4">Template Four</p>
+                                            <a href="https://github.com/AnasElwogoud/Template4"
+                                                class="mx-3 mx-md-1 mx-lg-3" target="_blank" title="Github Link"><i
+                                                    class="fa-brands fa-github fa-2x"></i></a>
+                                            <a href="https://anaselwogoud.github.io/Template4/" target="_blank" title="
+                                    Demo Live"><i class="fa-solid fa-link fa-2x"></i></a>
+                                        </div>
+                                    </div>
+                                    <img src="imgs/Portfolio-4.png" alt="">
                                 </div>
                             </div>
                         </div>
-                        <div class="portfolio-item col-12 col-lg-4">
+                        <div class="portfolio-item col-12 col-lg-6 col-xl-4">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="imgs/" alt="">
+                                    <div class="content">
+                                        <div class="text">
+                                            <p class="ps-xl-4 fw-bold h4">My Calculator</p>
+                                            <a href="https://github.com/AnasElwogoud/myTodoList"
+                                                class="mx-3 mx-md-1 mx-lg-3" target="_blank" title="Github Link"><i
+                                                    class="fa-brands fa-github fa-2x"></i></a>
+                                            <a href="https://anaselwogoud.github.io/myTodoList/" target="_blank" title="
+                                    Demo Live"><i class="fa-solid fa-link fa-2x"></i></a>
+                                        </div>
+                                    </div>
+                                    <img src="imgs/myTodoList.png" alt="">
                                 </div>
                             </div>
                         </div>
-                        <div class="portfolio-item col-12 col-lg-4">
+                        <div class="portfolio-item col-12 col-lg-6 col-xl-4">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="imgs/" alt="">
+                                    <div class="content">
+                                        <div class="text">
+                                            <p class="ps-xl-4 fw-bold h4">My Todo List</p>
+                                            <a href="https://github.com/AnasElwogoud/myCalculator"
+                                                class="mx-3 mx-md-1 mx-lg-3" target="_blank" title="Github Link"><i
+                                                    class="fa-brands fa-github fa-2x"></i></a>
+                                            <a href="https://anaselwogoud.github.io/myCalculator/" target="_blank"
+                                                title="
+                                    Demo Live"><i class="fa-solid fa-link fa-2x"></i></a>
+                                        </div>
+                                    </div>
+                                    <img src="imgs/myCalculator.png" alt="">
                                 </div>
                             </div>
                         </div>
